ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    meta.helm.sh/release-name: tharunidemoch
    meta.helm.sh/release-namespace: kube-system
  creationTimestamp: "2023-12-26T11:01:42Z"
  deletionGracePeriodSeconds: 0
  deletionTimestamp: "2023-12-26T11:13:07Z"
  finalizers:
  - ingress.k8s.aws/resources
  generation: 2
  labels:
    app.kubernetes.io/managed-by: Helm
  name: exp-ing
  namespace: kube-system
  resourceVersion: "209649"
  uid: 4d27b1cb-6988-4335-94f2-5df4dcec697d
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - backend:
          service:
            name: myapp
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: server
            port:
              number: 80
        path: /api/
        pathType: Prefix
status:
  loadBalancer: {}
